++ Scheduler 1.1.0-pl
++ Released on
+++++++++++++++++++++++++
- sTask->schedule now returns the sTaskRun object on success
- Fix several issues when sTaskRun.data isn't an array (#15, #18)
- Use configured manager_date_format and manager_time_format for the date/time displayed in the component (#16)
- Fix adding non-snippet tasks due to validation (#13)

++ Scheduler 1.0.2-pl
++ Released on 2014-05-29
+++++++++++++++++++++++++
Fix typos in English lexicon, added Dutch and German (Thx Christian Seel!)

++ Scheduler 1.0.1-pl
++ Released on 2014-05-07
+++++++++++++++++++++++++
- Fixed: load right package meta data at installation


++ Scheduler 1.0.0-pl
++ Released on 2014-05-07
+++++++++++++++++++++++++
- Initial release