@@ -5,6 +5,7 @@
 - Fix several issues when sTaskRun.data isn't an array (#15, #18)
 - Use configured manager_date_format and manager_time_format for the date/time displayed in the component (#16)
 - Fix adding non-snippet tasks due to validation (#13)
+- Fix fields being duplicated in the Tasks window
 
 ++ Scheduler 1.0.2-pl
 ++ Released on 2014-05-29
